; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mx1_camera.c_mx1_camera_querycap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mx1_camera.c_mx1_camera_querycap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.soc_camera_host = type { i32 }
%struct.v4l2_capability = type { i32, i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"i.MX1/i.MXL Camera\00", align 1
@VERSION_CODE = common dso_local global i32 0, align 4
@V4L2_CAP_VIDEO_CAPTURE = common dso_local global i32 0, align 4
@V4L2_CAP_STREAMING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.soc_camera_host*, %struct.v4l2_capability*)* @mx1_camera_querycap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mx1_camera_querycap(%struct.soc_camera_host* %0, %struct.v4l2_capability* %1) #0 {
  %3 = alloca %struct.soc_camera_host*, align 8
  %4 = alloca %struct.v4l2_capability*, align 8
  store %struct.soc_camera_host* %0, %struct.soc_camera_host** %3, align 8
  store %struct.v4l2_capability* %1, %struct.v4l2_capability** %4, align 8
  %5 = load %struct.v4l2_capability*, %struct.v4l2_capability** %4, align 8
  %6 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @strlcpy(i32 %7, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 4)
  %9 = load i32, i32* @VERSION_CODE, align 4
  %10 = load %struct.v4l2_capability*, %struct.v4l2_capability** %4, align 8
  %11 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @V4L2_CAP_VIDEO_CAPTURE, align 4
  %13 = load i32, i32* @V4L2_CAP_STREAMING, align 4
  %14 = or i32 %12, %13
  %15 = load %struct.v4l2_capability*, %struct.v4l2_capability** %4, align 8
  %16 = getelementptr inbounds %struct.v4l2_capability, %struct.v4l2_capability* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret i32 0
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
